Remove example snippets, it's already in the notebook

--- a/CommunityContributions/04-ErrorInsights/ErrorInsightsExamples.ipynb
+++ b/CommunityContributions/04-ErrorInsights/ErrorInsightsExamples.ipynb
@@ -73,18 +73,7 @@
    "source": [
     "### Example 1 - HTTP Errors\n",
     "\n",
-    "Web errors are often buried in an exception object. Rather than digging around just send it into the AI with Get-ErrorInsights to get a response similar to below:\n",
-    "\n",
-    "```\n",
-    "WebCmdletWebResponseException,Microsoft.PowerShell.Commands.InvokeRestMethodCommand\n",
-    "Response status code does not indicate success: 429 (Too Many Requests).\n",
-    "\n",
-    "This PowerShell error occurs when a user has exceeded the rate limit of requests to a web service. This is usually due to making too many requests in a short period of time. A potential solution is to use the Start-Sleep cmdlet to pause the script for a few seconds between requests. This will allow the web service to process the requests without exceeding the rate limit. For example:\n",
-    "\n",
-    "Invoke-RestMethod -Uri $url\n",
-    "Start-Sleep -Seconds 5\n",
-    "Invoke-RestMethod -Uri $url\n",
-    "```"
+    "Web errors are often buried in an exception object. Rather than digging around just send it into the AI with Get-ErrorInsights."
    ]
   },
   {
@@ -169,24 +158,12 @@
    "source": [
     "### Example 2 - Fixed Size Collections\n",
     "\n",
-    "An example of trying to modify a fixed size collection.\n",
-    "\n",
-    "```\n",
-    "NotSupportedException\n",
-    "Exception calling \"Add\" with \"1\" argument(s): \"Collection was of a fixed size.\"\n",
-    "\n",
-    "This error occurs when attempting to add an item to a collection that has a fixed size. This means that the collection cannot be modified and any attempts to add, remove, or modify items will result in this error.\n",
-    "\n",
-    "A potential solution is to create a new collection with a larger size and then add the item to the new collection. This can be done using the following PowerShell code:\n",
-    "\n",
-    "$newCollection = [System.Collections.ArrayList]::new(<size>)\n",
-    "$newCollection.Add(<item>)\n",
-    "```"
+    "An example of trying to modify a fixed size collection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 109,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -203,37 +180,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31;1mGet-EC2Instance: \u001b[0m\n",
+      "\u001b[31;1mMethodInvocationException: \u001b[0m\n",
       "\u001b[31;1m\u001b[36;1mLine |\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m   6 | \u001b[0m \u001b[36;1mGet-EC2Instance\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m     | \u001b[31;1m ~~~~~~~~~~~~~~~\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[31;1m\u001b[31;1m\u001b[36;1m     | \u001b[31;1mRequest has expired.\u001b[0m\n"
+      "\u001b[31;1m\u001b[36;1m\u001b[36;1m   3 | \u001b[0m \u001b[36;1m$array.Add(\"ghi\")\u001b[0m\n",
+      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m     | \u001b[31;1m ~~~~~~~~~~~~~~~~~\u001b[0m\n",
+      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[31;1m\u001b[31;1m\u001b[36;1m     | \u001b[31;1mException calling \"Add\" with \"1\" argument(s): \"Collection was of a fixed size.\"\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "# Use a missing commandlet\n",
-    "#$array = @(\"abc\", \"def\")\n",
-    "#$array.Add(\"ghi\")\n",
-    "Get-EC2Instance"
+    "# Add to a fixed size collection\n",
+    "$array = @(\"abc\", \"def\")\n",
+    "$array.Add(\"ghi\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 110,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(1,1): error CS0103: The name 'Get' does not exist in the current context\r\n(1,5): error CS0103: The name 'ErrorInsights' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,1): error CS0103: The name 'Get' does not exist in the current context\r\n",
-      "(1,5): error CS0103: The name 'ErrorInsights' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[96mNotSupportedException\n",
+      "Exception calling \"Add\" with \"1\" argument(s): \"Collection was of a fixed size.\"\n",
+      "\u001b[0m\n",
+      "This error occurs when attempting to add an item to a collection that has a fixed size. This means that the collection cannot be modified and any attempts to add, remove, or modify items will result in this error.\n",
+      "\n",
+      "A potential solution is to create a new collection with a larger size and then add the item to the new collection. This can be done using the following PowerShell code:\n",
+      "\n",
+      "$newCollection = [System.Collections.ArrayList]::new(<size>)\n",
+      "$newCollection.Add(<item>)\n"
      ]
     }
    ],
