Add error insights to main module

--- a/CommunityContributions/04-ErrorInsights/ErrorInsightsExamples.ipynb
+++ b/CommunityContributions/04-ErrorInsights/ErrorInsightsExamples.ipynb
@@ -14,49 +14,9 @@
    "source": [
     "# Error Insights\n",
     "\n",
-    "Some PowerShell errors are pretty vague so this function can take the details from the last error record and send them to ChatGPT to make sense of them.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Load the error insights function, this requires you to already have PowerShellAI installed\n",
-    ". .\\ErrorInsights.ps1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Load your OpenAPI key into the session for PowerShellAI if not already set\n",
-    "if (!$env:OpenAIKey) {\n",
-    "    $env:OpenAIKey = Read-Host \"Enter your OpenAIKey\"\n",
-    "}"
+    "Some PowerShell errors are pretty vague so this function can take the details from the last error record and send them to ChatGPT to make sense of them.  \n",
+    "\n",
+    "Make sure you have your `$env:OpenAIKey` set and have the PowerShellAI module installed and imported into your current PowerShell session."
    ]
   },
   {
@@ -71,14 +31,14 @@
     }
    },
    "source": [
-    "### Example 1 - HTTP Errors\n",
+    "### Example\n",
     "\n",
-    "Web errors are often buried in an exception object. Rather than digging around just send it into the AI with Get-ErrorInsights."
+    "Web errors are often buried in an exception object. Rather than digging around just send it into the AI with `Invoke-AIErrorHelper`!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -97,7 +57,7 @@
      "text": [
       "\u001b[31;1mInvoke-RestMethod: \u001b[0m\n",
       "\u001b[31;1m\u001b[36;1mLine |\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m   2 | \u001b[0m \u001b[36;1mInvoke-RestMethod \"https://postman-echo.com/status/429\"\u001b[0m\n",
+      "\u001b[31;1m\u001b[36;1m\u001b[36;1m   4 | \u001b[0m \u001b[36;1mInvoke-RestMethod \"https://postman-echo.com/status/429\"\u001b[0m\n",
       "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m     | \u001b[31;1m ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\n",
       "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[31;1m\u001b[31;1m\u001b[36;1m     | \u001b[31;1m{\u001b[0m\n",
       "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[31;1m\u001b[31;1m\u001b[36;1m\u001b[31;1m  \"status\": 429\u001b[0m\n",
@@ -112,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -141,92 +101,7 @@
     }
    ],
    "source": [
-    "Get-ErrorInsights"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "source": [
-    "### Example 2 - Fixed Size Collections\n",
-    "\n",
-    "An example of trying to modify a fixed size collection."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31;1mMethodInvocationException: \u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1mLine |\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m   3 | \u001b[0m \u001b[36;1m$array.Add(\"ghi\")\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m     | \u001b[31;1m ~~~~~~~~~~~~~~~~~\u001b[0m\n",
-      "\u001b[31;1m\u001b[36;1m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[0m\u001b[36;1m\u001b[31;1m\u001b[31;1m\u001b[36;1m     | \u001b[31;1mException calling \"Add\" with \"1\" argument(s): \"Collection was of a fixed size.\"\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add to a fixed size collection\n",
-    "$array = @(\"abc\", \"def\")\n",
-    "$array.Add(\"ghi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[96mNotSupportedException\n",
-      "Exception calling \"Add\" with \"1\" argument(s): \"Collection was of a fixed size.\"\n",
-      "\u001b[0m\n",
-      "This error occurs when attempting to add an item to a collection that has a fixed size. This means that the collection cannot be modified and any attempts to add, remove, or modify items will result in this error.\n",
-      "\n",
-      "A potential solution is to create a new collection with a larger size and then add the item to the new collection. This can be done using the following PowerShell code:\n",
-      "\n",
-      "$newCollection = [System.Collections.ArrayList]::new(<size>)\n",
-      "$newCollection.Add(<item>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "Get-ErrorInsights"
+    "Invoke-AIErrorHelper"
    ]
   }
  ],
@@ -252,13 +127,50 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
-      "languageName": null,
       "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
      }
     ]
    }
