Use the existing functions in the module

--- a/CommunityContributions/05-Settings/Settings.ipynb
+++ b/CommunityContributions/05-Settings/Settings.ipynb
@@ -285,6 +285,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -324,6 +325,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      }
     ]
