Use new functions

--- a/CommunityContributions/05-Settings/Settings.ipynb
+++ b/CommunityContributions/05-Settings/Settings.ipynb
@@ -12,8 +12,6 @@
     }
    },
    "source": [
-    "# Using Invoke-OpenAIAPI\n",
-    "\n",
     "## Set the $env:OpenAIKey = 'sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'"
    ]
   },
@@ -48,10 +46,8 @@
    },
    "outputs": [],
    "source": [
-    "$organizationId = 'org-IkLeiQaK1fZi6271T9u18jO5'\n",
-    "$url = '{0}/organizations/{1}/users' -f (Get-OpenAIBaseRestURI),$organizationId\n",
-    "\n",
-    "Invoke-OpenAIAPI $url"
+    "$organizationId = \"<YOUR Organization Id>\"\n",
+    "Get-OpenAIUser $organizationId"
    ]
   },
   {
@@ -88,9 +84,9 @@
     "$startDate = '2023-03-01'\n",
     "$endDate = '2023-04-01'\n",
     "\n",
-    "$urk = 'https://api.openai.com/dashboard/billing/usage?end_date={0}&start_date={1}' -f $endDate, $startDate\n",
+    "$usage = Get-OpenAIUsage -StartDate $startDate -EndDate $endDate\n",
     "\n",
-    "Invoke-OpenAIAPI $url"
+    "$usage.daily_costs"
    ]
   },
   {
@@ -124,9 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "$url = 'https://api.openai.com/dashboard/user/api_keys'\n",
-    "\n",
-    "Invoke-OpenAIAPI $url"
+    "Get-OpenAIKey"
    ]
   }
  ],
