added notebook section

--- a/CommunityContributions/05-Settings/Settings.ipynb
+++ b/CommunityContributions/05-Settings/Settings.ipynb
@@ -12,7 +12,7 @@
     }
    },
    "source": [
-    "## Set the $env:OpenAIKey = 'sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'"
+    "### Set the $env:OpenAIKey = 'sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'"
    ]
   },
   {
@@ -193,6 +193,17 @@
       "aliases": [],
       "languageName": null,
       "name": "value"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
