--- a/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
+++ b/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
@@ -63,6 +63,24 @@
    "source": [
     "NBCopilot 'insert comment based help into function'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "function Get-Timestamp {\n",
+    "    return (Get-Date -Format \"yyyy-MM-dd HH:mm:ss\")\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
