--- a/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
+++ b/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
@@ -13,7 +13,11 @@
     "\n",
     "### More details and videos\n",
     "- https://github.com/dfinke/PowerShellAI\n",
-    "\n"
+    "\n",
+    "\n",
+    "Using NBCopilot enables you to have a conversation with GPT. Meanging the below interaction makes conext and memory of the conversation possible. \n",
+    "\n",
+    "> **Note:** Stop-Chat is used at the end to stop the conversation."
    ]
   },
   {
@@ -62,6 +66,22 @@
    "outputs": [],
    "source": [
     "NBCopilot 'insert comment based help into function'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Stop-Chat"
    ]
   },
   {
