Added `kql` to validate set

--- a/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
+++ b/CommunityContributions/07-NotebookCopilot/NotebookCopilot.ipynb
@@ -86,6 +86,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "NBCopilot 'sample kql query' -cellType kql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "NBCopilot 'hello world in c#, just code no explanation' -cellType csharp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
@@ -97,9 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "function Get-Timestamp {\n",
-    "    return (Get-Date -Format \"yyyy-MM-dd HH:mm:ss\")\n",
-    "}"
+    "Stop-Chat"
    ]
   }
  ],
